--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -25,7 +25,7 @@
     
 }
 
-.input-div input, .input-div textarea, .input-div select{
+.input-div input:not([type="radio"]), .input-div textarea, .input-div select{
     width: 30rem;
     height: 2.7rem;
     border: none;
@@ -34,6 +34,21 @@
     padding: 10px 15px;
     outline: none;
     margin: .7rem 0;
+}
+
+.radio-email-group {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-top: 0.7rem;
+}
+
+.radio-email-group input[type="radio"] {
+    margin-right: 0.3rem;
+}
+
+.radio-email-group label {
+    font-size: 14px;
 }
 
 .form-btn button{
@@ -50,7 +65,7 @@
         gap: 2rem;
     }
 
-    .input-div input, .input-div textarea, .input-div select{
+    .input-div input:not([type="radio"]), .input-div textarea, .input-div select{
         width: 20rem;
         height: 2.7rem;
     }
@@ -74,7 +89,7 @@
         margin: .3rem 0;
     }
 
-    .input-div input, .input-div textarea, .input-div select{
+    .input-div input:not([type="radio"]), .input-div textarea, .input-div select{
         width: 100%;
         height: 2.7rem;
     }
