--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -47,7 +47,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding-bottom: 3rem;
+        padding: 1rem 1rem 3rem;
     }
 
     .app__navbar-logo{
