--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,11 @@ html{
     scroll-behavior: smooth;
 }
 
+#root{
+    overflow-x: hidden;
+}
+
 a{
     text-decoration: none;
     color: #000;
-}
-
-body{
-    overflow-x: hidden;
 }
