--- a/src/components/PageBanner/PageBanner.css
+++ b/src/components/PageBanner/PageBanner.css
@@ -1,6 +1,7 @@
 .app__pageBanner{
     background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url("../../assets/contactBanner.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
     height: 65vh;
 }
